--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>INDEX HTML</p>
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+
+  <div class="main-container">
+    <h1 class="title">Alphabet Quiz</h1>
+    <div>
+      <div class="box">
+        <a class="button is-info" href="/practice">practice</a>
+        <p>practice writing the alphabet</p>
+      </div>
+      <div class="box">
+        <a class="button is-info" href="/add-data">add data</a>
+        <p>improve the model by adding data</p>
+      </div>
+    </div>
+  </div>
+
+{% endblock %}
