Completed drawing functionality.

--- a/templates/addData.html
+++ b/templates/addData.html
@@ -16,6 +16,9 @@
   </div>
   
   <script>
-    $(document).ready(function() {startCanvas})
+    $(document).ready(function() {
+      startCanvas()
+    })
   </script>
+
 {% endblock %}
