--- a/templates/practice.html
+++ b/templates/practice.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-
   <div class="main-container">
     <div>
       <a href="/" class="button is-text">&lt; return to main menu</a>
@@ -16,6 +15,9 @@
   </div>
 
   <script>
-    $(document).ready(function() {startCanvas})
+    $(document).ready(function() {
+      startCanvas()
+    })
   </script>
+
 {% endblock %}
