--- a/templates/addData.html
+++ b/templates/addData.html
@@ -10,6 +10,9 @@
       <canvas id="canvas" width="200" height="200"></canvas>
     </div>
     <div>
+      <p>Write a lower case "{{letter}}"</p>
+    </div>
+    <div>
         <button type="button" class="button is-success" onclick="addDataAction()">add data</button>
         <button type="button" class="button is-info" onclick="resetCanvas()">clear</button>
     </div>
