--- a/templates/addData.html
+++ b/templates/addData.html
@@ -13,8 +13,13 @@
       <p>Write a lower case "{{letter}}"</p>
     </div>
     <div>
-        <button type="button" class="button is-success" onclick="addDataAction()">add data</button>
-        <button type="button" class="button is-info" onclick="resetCanvas()">clear</button>
+        <form id="add-data-form" action="add-data" method="POST">
+          <input id="pixels" name="pixels" type="hidden"/>
+          <input id="letter" name="letter" type="hidden" value="{{letter}}"/>
+          <button type="button" class="button is-success" onclick="addDataAction()">add data</button>
+          <button type="button" class="button is-info" onclick="resetCanvas()">clear</button>
+        </form>
+        
     </div>
   </div>
   
